# dota2-match-finder

./: Cargo.toml  flake.nix
.github/workflows/: dev.yml
clickhouse/: create-dota2-matches-table-full.sql  create-dota2-matches-table.sql
src/: args.rs  client.rs  collector.rs  database.rs  dota2.rs  main.rs  model.rs  rate.rs  scheduler.rs  service.rs  store.rs
src/dota2/: full.rs  mod.rs  partial.rs
src/model/: full.rs  mod.rs  partial.rs
tests/: 1730303804-error.json  6742154809-error.json  6796079312-error.json
