[package]
name = "dota2-match-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
clickhouse = "0.13.1"
env_logger = "0.11.7"
kez = { version = "0.0.8", features = ["deny-unknown-fields"] }
log = "0.4.26"
reqwest = "0.12.13"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.0", features = ["net", "rt-multi-thread"] }
