[package]
name = "dota2-match-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
backon = "1.4.1"
clap = { version = "4.5.31", features = ["derive"] }
clickhouse = "0.13.1"
env_logger = "0.11.7"
itertools = "0.14.0"
kez = "0.0.8"
log = "0.4.26"
reqwest = "0.12.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["net", "rt-multi-thread", "io-std", "io-util", "macros", "fs"] }
